syntax = "proto3";
package rollkit.v1;

import "google/protobuf/empty.proto";
import "rollkit/v1/rollkit.proto";
import "rollkit/v1/state.proto";

option go_package = "github.com/rollkit/rollkit/types/pb/rollkit/v1";

// P2PService defines the RPC service for the P2P package
service P2PService {
  // GetPeerInfo returns information about the connected peers
  rpc GetPeerInfo(google.protobuf.Empty) returns (GetPeerInfoResponse) {}

  // GetNetInfo returns network information
  rpc GetNetInfo(google.protobuf.Empty) returns (GetNetInfoResponse) {}
}

// GetPeerInfoRequest defines the request for retrieving peer information
message GetPeerInfoRequest {
  // Empty request
}
// GetNetInfoRequest defines the request for retrieving network information
message GetNetInfoRequest {
  // Empty request
}
// GetPeerInfoResponse defines the response for retrieving peer information
message GetPeerInfoResponse {
  // List of connected peers
  repeated PeerInfo peers = 1;
}
// GetNetInfoResponse defines the response for retrieving network information
message GetNetInfoResponse {
  // Network information
  NetInfo net_info = 1;
}
// PeerInfo contains information about a connected peer
message PeerInfo {
  // Peer ID
  string id = 1;
  // Peer address
  string address = 2;
}
// NetInfo contains information about the network
message NetInfo {
  // Network ID
  string id = 1;
  // Listen address
  string listen_address = 2;
  // List of connected peers
  repeated string connected_peers = 3;
}
